# Real-Time-Edge-Detection-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectionapp/: MainActivity.kt
app/src/main/java/com/example/edgedetectionapp/gl/: MyGLRenderer.kt  MyGLSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
docs/: ALGORITHM.md  ARCHITECTURE.md  PROJECT_STRUCTURE.md
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  style.css  viewer.ts
web-demo/: README.md  index.html  index.js  package.json  style.css  tsconfig.json  viewer.js  viewer.ts
